--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "init": "^0.1.2",
+    "json-server": "^1.0.0-alpha.23",
+    "npx": "^10.2.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -23,12 +26,16 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
+    "autoprefixer": "^10.4.19",
     "cypress": "^13.7.2",
+    "daisyui": "^4.10.2",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-vue": "^9.23.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "start-server-and-test": "^2.0.3",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.8"
   }
 }
