--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "test:unit": "cypress run --component",
     "test:unit:dev": "cypress open --component",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "frontend": "vite --host ip23us3.sit.kmutt.ac.th"
   },
   "dependencies": {
     "init": "^0.1.2",
