--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.application.name=backend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.password=GamerAli157@
+spring.datasource.password=Bjmnk_202002
 spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/itb-kk
 spring.jpa.hibernate.ddl-auto=none
@@ -9,4 +9,3 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jackson.time-zone=UTC
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 server.error.include-stacktrace=never
-server.port=${port:8080}
