--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,16 @@
-# VITE_SERVER_URL=http://ip23us3.sit.kmutt.ac.th:8080
-VITE_SERVER_URL=http://localhost:8080
+# Close on Vm
+# comment คือใส่ # ไว้ข้างหน้า
+#ถ้าอยู่ใน Vm comment หน้านี้ทั้งหมดเเล้วไปใช้ใน .env.production
+VITE_BASE_URL=http://localhost:8080
 DB_PASSWORD=GamerAli157@
+
+# Open Server on Vm
+# VITE_BASE_URL=http://ip23us3.sit.kmutt.ac.th:8080
+# VITE_BASE_URL= http://ip23us3.sit.kmutt.ac.th:8080/v2
+# VITE_BASE_URL= /us3/api/
+# VITE_BASE_URL= /us3/api/v2
+# VITE_BASE_URL=http://localhost:8080
+# VITE_BASE_URL=http://localhost:8080/v1
+# VITE_BASE_URL=http://localhost:8080/v2
+
 # DB_PASSWORD=int221@SIT
