--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/us3/",
     "preview": "vite preview",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
