--- a/frontend/.env
+++ b/frontend/.env
@@ -6,9 +6,9 @@ DB_PASSWORD=GamerAli157@
 
 # Open Server on Vm
 # VITE_BASE_URL=http://ip23us3.sit.kmutt.ac.th:8080
-# VITE_BASE_URL= http://ip23us3.sit.kmutt.ac.th:8080/v2
-# VITE_BASE_URL= /us3/api/
-# VITE_BASE_URL= /us3/api/v2
+# VITE_BASE_URL=http://ip23us3.sit.kmutt.ac.th:8080/v2
+# VITE_BASE_URL=/us3/api/
+# VITE_BASE_URL=/us3/api/v2
 # VITE_BASE_URL=http://localhost:8080
 # VITE_BASE_URL=http://localhost:8080/v1
 # VITE_BASE_URL=http://localhost:8080/v2
