--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,9 +2,9 @@
 # comment คือใส่ # ไว้ข้างหน้า จะใช้ก็ลบออก
 # ใช้อันไหนก็เปิดเอานะอันไหนไม่ใช้ก็ปิดไว้ นี่ไม่เเน่ใจว่าใช้อันไหนบ้าง
 
-# VITE_BASE_URL= http://ip23us3.sit.kmutt.ac.th:8080/v2
-# VITE_BASE_URL= /us3/api/
-# VITE_BASE_URL= /us3/api/v2
+# VITE_BASE_URL=http://ip23us3.sit.kmutt.ac.th:8080/v2
+# VITE_BASE_URL=/us3/api/
+# VITE_BASE_URL=/us3/api/v2
 # VITE_BASE_URL=http://ip23us3.sit.kmutt.ac.th:8080
 # VITE_BASE_URL=http://localhost:8080
 # VITE_BASE_URL=http://localhost:8080/v1
