--- a/docker-compose.mysql.yml
+++ b/docker-compose.mysql.yml
@@ -1,11 +1,11 @@
-version: "3.7"
+version: "3.8"
 services:
   db:
     image: mysql/mysql-server:latest
-    command: --default-authentication-plugin=,ysql_native_password
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     volumes:
-      - mysql_data:var/lib/mysql
+      - mysql_data:/var/lib/mysql
       - ./logs:/var/mysql
     ports:
       - 3306:3306
@@ -18,6 +18,7 @@ services:
 volumes:
   mysql_data:
 
-netwroks:
-  db-network:
+networks:
+  backend-db-network:
     name: backend-db-network
+    external: true
