--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -1,25 +1,37 @@
 services:
-  proxy: 
-    image: 
+  proxy:
+    image: nginx:alpine
+    volumes:
+      - ./proxy/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
-      - 443:443
     networks:
-      - backend-db-network
-    
+      - proxy-network
+
   frontend:
-    image: frontend:v5
-    ports:
-      - 3000:3000
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     networks:
-      - backend-db-network
+      - proxy-network
 
   backend:
-    image: backend:V10
+    build:
+      context: ./backend 
+      dockerfile: Dockerfile
     ports:
       - 8080:8080
     environment:
       - MYSQL_HOST=db
       - MYSQL_PASSWORD=int221@SIT
     networks:
-      - backend-db-network    
+      - proxy-network
+      - backend-db-network
+
+networks:
+  proxy-network:
+    name: proxy-network
+  backend-db-network:
+    name: backend-db-network
+    external: true
+  
