--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,14 +1,13 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+    listen  80;
+    server_name  frontend;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-	try_files $uri $uri/ /index.html;
+	    try_files $uri $uri/ /index.html;
     }
 
     #error_page  404              /404.html;
