--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,4 +1,7 @@
-FROM nginx:alpine
+FROM nginx:latest
+
 COPY ./default.conf /etc/nginx/conf.d/default.conf
-ENTRYPOINT {"nginx", "-g", "daemon off;"}
+
 EXPOSE 80
+
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
