--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -4,37 +4,37 @@ server {
     server_name localhost;
 
     #Error pages and root inside location for error handling
-    error_page 500 502 503 504 /50x.html;
-    location = /50z.html {
-        root /usr/share/nginx/html;
-    }
-
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_redirec off;
-    }
+    # error_page 500 502 503 504 /50x.html;
+    # location = /50z.html {
+    #     root /usr/share/nginx/html;
+    # }
 
     location /us3/ {
         rewrite ^/us3(/.*)$ $1 break;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://frontend;
+        proxy_pass http://frontend/;
     }
 
-    location /api/ {
-        rewrite ^/api(/.*)$ $1 break;
+    location / {
+        proxy_pass http://frontend/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
+
+    location /us3/api/ {
+        rewrite ^/us3/api(/.*)$ $1 break;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_pass http://backend:8080;
     }
 
-    location /us3/api/ {
-        rewrite ^/us3/api(/.*)$ $1 break;
+    location /api/ {
+        rewrite ^/api(/.*)$ $1 break;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
