--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 #spring.application.name=backend
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.password=${MYSQL_PASSWORD:password}
-#spring.datasource.username=${MYSQL_USERNAME:root}
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE_NAME:itb-kk}
-spring.datasource.password=GamerAli157@
-spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost:3306/itb-kk
+spring.datasource.password=${MYSQL_PASSWORD:password}
+spring.datasource.username=${MYSQL_USERNAME:root}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE_NAME:itb-kk}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #server.servlet.context-path=/itb-kk
