--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -9,7 +9,7 @@ server {
     #     root /usr/share/nginx/html;
     # }
 
-    location /us3/ {
+    location /us3/task {
         rewrite ^/us3(/.*)$ $1 break;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
