--- a/docker-compose.mysql.yml
+++ b/docker-compose.mysql.yml
@@ -10,8 +10,8 @@ services:
     # ports:
     #   - 3306:3306
     environment:
-      MYSQL_ROOT_PASSWORD: int221@SIT
-      MYSQL_ROOT_HOST: "%"
+      - MYSQL_ROOT_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_ROOT_HOST=%
     networks:
       - backend-db-network
 
