--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.13.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.viascom.nanoid</groupId>
+            <artifactId>nanoid</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
