feat: Add SSL config to NGINX and update docker-compose.serivce
- Added SSL certificate and key paths in the NGINX configuration for secure HTTPS communication.
- Configured NGINX to listen on port 443 for HTTPS connections.
- Updated the server_name directive to include the server's public hostname.
- Enhanced error handling and added location blocks for API endpoints.
- Included DH parameters for stronger security.

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,13 +1,74 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name localhost;
+    server_name localhost ip23us3.sit.kmutt.ac.th;
 
     #Error pages and root inside location for error handling
     # error_page 500 502 503 504 /50x.html;
     # location = /50z.html {
     #     root /usr/share/nginx/html;
     # }
+
+    location /us3/ {
+        rewrite ^/us3(/.*)$ $1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://frontend/;
+    }
+
+    location / {
+        proxy_pass http://frontend/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_redirect off;
+    }
+
+    location /us3/api/ {
+        rewrite ^/us3/api(/.*)$ $1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://backend:8080;
+    }
+
+    location /api/ {
+        rewrite ^/api(/.*)$ $1 break;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://backend:8080;
+    }
+}
+
+server {
+    listen    443 ssl;
+    server_name ip23us3.sit.kmutt.ac.th;
+
+
+    ssl_certificate /ssl/fullchain.pem;
+    ssl_certificate_key /ssl/privkey.pem;
+
+    ssl_session_cache    shared:SSL:1m;
+    ssl_session_timeout  5m;
+
+    ssl_dhparam /ssl/dhparam-2048.pem;
+
+    # Specify the password as a format supported by openssl
+    ssl_protocols  TLSv1.3;
+
+    ssl_ciphers  HIGH:!aNULL:!MD5;  # Password encryption method
+    ssl_prefer_server_ciphers  on;   # Server passwords that rely on SSLv3 and TLSv1 protocols will take precedence over client passwords
+
+    #error_page  404              /404.html;
+
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
 
     location /us3/ {
         rewrite ^/us3(/.*)$ $1 break;
