--- a/docker-compose.services.yml
+++ b/docker-compose.services.yml
@@ -3,14 +3,18 @@ services:
     image: nginx:alpine
     volumes:
       - ./proxy/default.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl/fullchain.pem:/ssl/fullchain.pem
+      - ./ssl/privkey.pem:/ssl/privkey.pem
+      - ./ssl/dhparam-2048.pem:/ssl/dhparam-2048.pem
     ports:
       - 80:80
+      - 443:443
     networks:
       - proxy-network
 
   backend:
     build:
-      context: ./backend 
+      context: ./backend
       dockerfile: backend.Dockerfile
     ports:
       - 8080:8080
@@ -31,9 +35,8 @@ services:
       - proxy-network
 
 networks:
-  proxy-network: 
+  proxy-network:
     name: proxy-network
   backend-db-network:
     name: backend-db-network
     external: true
-  
